add file delete functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">P2J-v2</string>
+    <string name="app_name">P2J</string>
     <string name="p2j_title">P2J</string>
     <string name="menu_global_option_title">Option</string>
     <string name="menu_global_back">Back</string>
